@@ -14,7 +14,7 @@ else
 fi
 
 JAVA='java'
-JAVAOPT="-Dfile.encoding=UTF-8 $JAVA_OPTS"
+JAVAOPT="-Dfile.encoding=UTF-8 $JAVA_OPTS --module-path javafx-sdk-23/lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.web,javafx.graphics,javafx.media,javafx.swing --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
 JAR=$DIR/build/libs/crowdwalk.jar
 
 echo "$JAVA $JAVAOPT -Djdk.gtk.version=2 -jar $JAR $*"
